--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -170,6 +170,18 @@ em {
         top: -0px; }
 
 /*--------------------------------------------------------------*/
+pre {
+  background: #f8f7f2;
+  border: 1px solid #E6E3DA;
+  border-radius: 5px;
+  font: 14px "Courier New",Courier,monospace;
+  padding: 15px;
+  color: #069;
+  border-right: 30px solid #E6E3DA; }
+
+.tag-txt {
+  color: #b61039; }
+
 h1 {
   color: #595959;
   font-family: "RobotoMedium";
@@ -179,7 +191,7 @@ h1 {
 
 h2 {
   font-family: "RobotoMedium";
-  font-size: 35px;
+  font-size: 25px;
   text-align: center;
   margin-bottom: 40px;
   color: #2f0226; }
