--- a/wp-content/themes/lantana/style.css
+++ b/wp-content/themes/lantana/style.css
@@ -39,6 +39,10 @@ q:before, q:after {
   content: '';
   content: none; }
 
+html, body {
+  height: 100%;
+  min-height: 100%; }
+
 body {
   font-family: "RobotoRegular";
   font-size: 16px;
@@ -60,9 +64,9 @@ em {
   font-size: 15px;
   font-style: italic; }
 
-/*----------- ╨б╤В╨╕╨╗╨╕ ╨┤╨╗╤П ╨С╨╗╨╛╨│╨░ (╨Р╤Б╨╗╨░╨╜) 16.09.2016 ----------------------------------*/
-.col-md-offset-2 {
-  margin-bottom: 16px; }
+.section_position {
+  width: 100%;
+  padding: 25px 0px; }
 
 .ab-h1-blog {
   margin-bottom: -15px; }
@@ -190,10 +194,11 @@ h1 {
   padding-bottom: 40px; }
 
 h2 {
-  font-family: "RobotoMedium";
-  font-size: 25px;
+  font-size: 30px;
+  font-family: "Exo2-ExtraLight";
+  color: #000;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   color: #2f0226; }
 
 h3 {
@@ -203,6 +208,9 @@ h3 {
   margin-bottom: 17px;
   color: #595959;
   border-bottom: 1px solid #eee; }
+
+.section_position {
+  padding: 25px 0px; }
 
 .center {
   text-align: center; }
@@ -246,24 +254,23 @@ textarea {
   display: inline-block;
   padding: 8px 15px;
   min-width: 145px;
-  background: #c41857;
   border: 1px solid #e52a6f;
   font-family: "RobotoLight";
   font-size: 14px;
-  color: #fff;
+  color: #e52a6f;
   cursor: pointer;
   transition: 0.5s;
   line-height: 30px;
   text-align: center;
   text-transform: uppercase;
-  letter-spacing: .1em; }
+  letter-spacing: 0 0.5em; }
 
 .button-1:hover {
-  background: none;
-  position: relative;
-  overflow: hidden; }
+  background: #c41857;
+  border: 1px solid #c41857;
+  color: #fff; }
 
-.button-1:hover:after {
+.button-1:hover1:after {
   position: absolute;
   content: "";
   width: 100%;
@@ -273,39 +280,18 @@ textarea {
   top: 0px;
   animation: button 550ms ease-in-out; }
 
-.button-1 {
-  display: inline-block;
-  padding: 8px 15px;
-  min-width: 145px;
-  background: #c41857;
-  border: 1px solid #e52a6f;
-  font-family: "RobotoLight";
-  font-size: 14px;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.5s;
-  line-height: 30px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: .1em; }
-
-.button-1:hover {
-  background: none;
-  position: relative;
-  overflow: hidden; }
-
-.lang-box {
+.lang-box2 {
   margin-left: auto;
   width: 23px;
   min-height: 40px;
   position: relative; }
-  .lang-box ul {
+  .lang-box2 ul {
     display: block;
     position: absolute;
     right: 0px;
     top: 4px;
     min-height: 40px; }
-    .lang-box ul li {
+    .lang-box2 ul li {
       display: block;
       margin-bottom: 5px;
       margin-top: 25px;
@@ -313,17 +299,17 @@ textarea {
       display: none;
       position: absolute;
       z-index: 10; }
-      .lang-box ul li img {
+      .lang-box2 ul li img {
         display: block;
         width: 23px;
         height: auto; }
-    .lang-box ul .active {
+    .lang-box2 ul .active {
       display: block;
       position: absolute;
       top: -24px;
       left: 0px;
       z-index: 5; }
-  .lang-box ul:hover li {
+  .lang-box2 ul:hover li {
     display: block !important; }
 
 .button-2 {
@@ -425,75 +411,136 @@ textarea {
   background: #FD4040;
   transition: 0.5s; }
 
+.wrap {
+  height: 100%;
+  width: 100%;
+  min-height: 100%; }
+
 .header {
-  background: url(./img/ab-fon.jpg) top center;
+  background: url(./img/lantana2.jpg) top center;
   background-repeat: no-repeat;
   background-size: cover;
   color: #fff;
-  position: relative; }
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  border-bottom: 1px solid #EBEBEB; }
 
 .header:before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  height: 100%; }
+
+.header__top_position {
+  padding: 7px 0px;
+  padding-top: 30px; }
+
+.main-menu_view {
+  display: block;
+  width: 100%;
+  text-align: right;
+  padding-top: 10px;
+  color: #000; }
+
+.main-menu__item_view {
+  display: inline-block;
+  margin-right: 45px; }
+
+.main-menu__item_view:last-child {
+  margin-right: 0; }
+
+.main-menu__link_view {
+  color: #000;
+  letter-spacing: 0.05em; }
+
+.main-menu__link_view:hover {
+  position: relative; }
+
+.main-menu__link_view:hover:before {
   position: absolute;
   content: "";
   width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: rgba(0, 0, 0, 0.5); }
+  height: 5px;
+  background: red;
+  left: 0px;
+  bottom: -6px;
+  animation: main-menu__link_view 350ms ease-in-out;
+  /* fallback */
+  background-color: red;
+  background-image: url(images/linear_bg_1.png);
+  background-repeat: repeat-y;
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, left top, right top, from(#e52a6f), to(#675682));
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(left, #e52a6f, #675682);
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(left, #e52a6f, #675682);
+  /* IE 10 */
+  background: -ms-linear-gradient(left, #e52a6f, #675682);
+  /* Opera 11.10+ */
+  background: -o-linear-gradient(left, #e52a6f, #675682); }
 
-video {
-  display: block; }
-
-.header-inner {
-  background: #5f054e;
-  top: 0px;
-  left: 0%;
-  color: #000; }
-
-.header .container {
-  position: relative;
-  z-index: 100; }
-
-.header-top {
-  position: relative;
-  z-index: 100; }
-
+@keyframes main-menu__link_view {
+  0% {
+    width: 0; }
+  100% {
+    width: 100%; } }
 .header-fixed {
   position: fixed;
   width: 100%;
   z-index: 500;
-  background: #5f054e;
+  background: #fff;
   top: 0px;
-  left: 0%; }
+  left: 0%;
+  padding-top: 7px;
+  border-bottom: 1px solid #FBFBFB;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
 
-.header-vn {
-  width: 100%;
-  z-index: 500;
-  background: #5f054e; }
-
-.header-top-up {
-  background: rgba(0, 0, 0, 0.6);
-  padding: 12px 0px;
+.header__middle_position {
+  font-family: "Exo2-ExtraLight";
+  color: #000;
+  padding-top: 150px;
+  font-size: 45px;
+  line-height: 55px;
   text-align: center; }
-  .header-top-up .ab-phone {
-    padding-bottom: 10px;
-    color: white; }
-  .header-top-up .button-3 {
-    margin-bottom: 10px; }
 
-.header-top-down {
-  padding: 8px 0px; }
+.lang-box__view {
+  display: inline-block;
+  position: relative; }
 
-.burger-box {
-  text-align: right;
-  font-size: 32px; }
-  .burger-box .main_menu_button {
-    cursor: pointer; }
+.lang-box__inner_position {
+  display: none;
+  position: absolute;
+  top: 0px; }
 
-.main-menu {
+.lang-box_view:hover {
+  position: relative; }
+  .lang-box_view:hover .lang-box__inner_position {
+    animation: lang-box_view 350ms ease-in-out;
+    display: block; }
+
+.lang-box__view_flag_size {
+  width: 23px;
+  height: 16px; }
+
+@keyframes lang-box_view {
+  0% {
+    top: 30px;
+    opacity: 0; }
+  100% {
+    top: 0px;
+    opacity: 1; } }
+.header-buttons_position {
+  padding-top: 50px; }
+
+.main-menu22 {
   text-align: right;
   font-family: 'Open Sans', arial; }
-  .main-menu .sub-menu {
+  .main-menu22 .sub-menu {
     text-align: center;
     width: 200px;
     display: none;
@@ -504,20 +551,21 @@ video {
     padding-bottom: 15px;
     padding-left: 0 !important;
     background: #5F054E; }
-    .main-menu .sub-menu li {
+    .main-menu22 .sub-menu li {
       display: block;
       margin-left: 0px; }
-  .main-menu li {
+  .main-menu22 li {
     display: inline-block;
     margin-left: 35px;
-    position: relative; }
-    .main-menu li a {
+    position: relative;
+    outline: 1px solid red; }
+    .main-menu22 li a {
       color: #fff;
       text-decoration: none;
       position: relative;
       text-transform: uppercase;
       letter-spacing: 0.25; }
-    .main-menu li a:hover {
+    .main-menu22 li a:hover {
       color: #e52a6f;
       animation: menuhover-hover 350ms ease-in-out; }
 @keyframes menuhover-hover {
@@ -527,7 +575,7 @@ video {
     color: #fff; }
   100% {
     color: #e52a6f; } }
-    .main-menu li a:hover:after {
+    .main-menu22 li a:hover:after {
       position: absolute;
       content: "]";
       right: -7px;
@@ -536,7 +584,7 @@ video {
       animation: menuhover-after 350ms ease-in-out;
       color: #e52a6f;
       font-weight: bold; }
-    .main-menu li a:hover:before {
+    .main-menu22 li a:hover:before {
       position: absolute;
       content: "[";
       height: 3px;
@@ -545,7 +593,7 @@ video {
       animation: menuhover-before 350ms ease-in-out;
       color: #e52a6f;
       font-weight: bold; }
-  .main-menu li:hover > .sub-menu {
+  .main-menu22 li:hover > .sub-menu {
     display: block; }
 @keyframes menuhover-after {
   0% {
@@ -565,11 +613,11 @@ video {
   100% {
     opacity: 1;
     left: 0%; } }
-  .main-menu .current-menu-item a {
+  .main-menu22 .current-menu-item a {
     color: #e52a6f;
     position: relative;
     font-weight: bold; }
-  .main-menu .current-menu-item a:before {
+  .main-menu22 .current-menu-item a:before {
     position: absolute;
     content: "";
     width: 100%;
@@ -577,38 +625,21 @@ video {
     background: #e52a6f;
     bottom: -8px; }
 
-a.logo {
+.header-logo_view {
+  width: 50px;
+  height: 50px;
+  border-radius: 10em;
+  background: #F8F8F8;
+  text-align: center; }
+
+.header-logo__link_view {
   display: inline-block;
   color: #fff;
   font-family: "Palermo-Bold";
   font-size: 28px;
-  text-transform: uppercase; }
-  a.logo span {
-    color: #e52a6f; }
-
-.header-middle {
-  margin-top: 13%;
-  color: #fff;
-  text-align: center;
-  font-size: 35px; }
-
-.header-bottom {
-  text-align: center;
-  margin-top: 5%; }
-  .header-bottom .button-1 {
-    margin-left: 15px;
-    margin-right: 15px; }
-
-.main-content {
-  padding: 25px 0px; }
-  .main-content p {
-    padding-bottom: 5px;
-    line-height: 1.525em;
-    padding-top: 15px; }
-
-.home-page-portfolio {
-  width: 100%;
-  padding: 50px 0px; }
+  text-transform: uppercase;
+  color: #e52a6f;
+  padding-top: 13px; }
 
 /**********MENU***********/
 #check_1 {
@@ -825,25 +856,23 @@ a.logo {
   display: block;
   margin: 0 auto; }
 
-.service {
-  width: 100%;
+.section_service {
   background: #f1f4f6;
-  padding: 50px 0px;
   border-top: 3px solid #e8edf0; }
-  .service .service-block {
+  .section_service .service-block {
     width: 100%;
     border: 2px solid #f1f4f6;
     font-family: 'Open Sans', arial; }
-    .service .service-block .title {
+    .section_service .service-block .title {
       font-size: 17px;
       margin-top: 20px;
       font-family: 'Open Sans Bold', arial;
       font-weight: bold; }
-    .service .service-block p {
+    .section_service .service-block p {
       font-size: 16px;
       margin-top: 25px;
       line-height: 26px; }
-    .service .service-block .icon-block {
+    .section_service .service-block .icon-block {
       display: inline-block;
       width: 90px;
       height: 90px;
@@ -851,12 +880,12 @@ a.logo {
       border-radius: 10em;
       background: #b3c2cf;
       box-shadow: inset 1px 2px 3px #000; }
-    .service .service-block .icon-block {
+    .section_service .service-block .icon-block {
       display: inline-block;
       font-size: 35px;
       color: #e52a6f;
       margin-top: 10px; }
-    .service .service-block .icon-block .fa {
+    .section_service .service-block .icon-block .fa {
       -webkit-transition-duration: 0.8s;
       -moz-transition-duration: 0.8s;
       -o-transition-duration: 0.8s;
@@ -867,16 +896,16 @@ a.logo {
       transition-property: transform;
       overflow: hidden;
       color: dareken(#e52a6f, 5%); }
-    .service .service-block .icon-block:hover .fa {
+    .section_service .service-block .icon-block:hover .fa {
       -webkit-transform: rotate(360deg);
       -moz-transform: rotate(360deg);
       -o-transform: rotate(360deg); }
-    .service .service-block .button-5 {
+    .section_service .service-block .button-5 {
       margin-top: 30px; }
-    .service .service-block .price {
+    .section_service .service-block .price {
       margin-top: 25px;
       position: relative; }
-    .service .service-block .price:before {
+    .section_service .service-block .price:before {
       position: absolute;
       content: "";
       width: 50px;
@@ -886,21 +915,19 @@ a.logo {
       left: 50%;
       transform: translate(-50%, 0); }
 
-.contacts-block {
-  width: 100%;
-  padding: 50px 0px;
+.section_contacts-block {
   background: #182945;
   color: #fff; }
-  .contacts-block h2 {
+  .section_contacts-block h2 {
     color: #fff; }
-  .contacts-block .title {
+  .section_contacts-block .title {
     display: block;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 15px;
     text-transform: uppercase;
     font-family: 'Open Sans', arial; }
-  .contacts-block input[type="submit"] {
+  .section_contacts-block input[type="submit"] {
     display: inline-block !important; }
 
 .soc-block {
@@ -1028,7 +1055,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #7f00ff; }
+    border-color: #8000ff; }
   100% {
     border-color: red; } }
 @-webkit-keyframes pulse {
@@ -1043,7 +1070,7 @@ a.logo {
   50% {
     border-color: cyan; }
   75% {
-    border-color: #7f00ff; }
+    border-color: #8000ff; }
   100% {
     border-color: red; } }
 @keyframes pulse {
@@ -1113,8 +1140,6 @@ a.logo {
     margin-bottom: 25px; }
 
 .testimonials {
-  width: 100%;
-  padding: 50px 0px;
   	/*.owl-dots{
   		text-align: center;
   		position: absolute;
@@ -1369,9 +1394,6 @@ input, textarea {
 .opencart-img img {
   margin-top: 30px !important; }
 
-.ab-h2 h2 {
-  padding-top: 40px; }
-
 .ab-right {
   color: white; }
 
@@ -1425,15 +1447,9 @@ input, textarea {
 /* Large Devices, Wide Screens */
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 991px) {
-  h2 {
-    padding: 10px 13px; }
-
   .anz-mobile {
     display: block; }
 
-  /*menu style*/
-  /*menu style*/
-  /*menu*/
   #check_1 {
     display: none; }
 
@@ -1494,19 +1510,7 @@ input, textarea {
     color: #fff;
     background: white;
     border: 1px solid #828089;
-    box-shadow: 0px 0px 5px #828089; }
-
-  .main-menu li {
-    display: block; }
-    .main-menu li a {
-      display: block;
-      color: #e52a6f; }
-    .main-menu li a:hover {
-      animation: none !important;
-      color: #fff; }
-    .main-menu li a:hover:before, .main-menu li a:hover:after {
-      content: "";
-      animation: none; } }
+    box-shadow: 0px 0px 5px #828089; } }
 /* Small Devices, Tablets */
 /* Extra Small Devices, Phones */
 /* Custom, iPhone Retina */
@@ -1554,14 +1558,6 @@ input, textarea {
   h1 {
     text-align: left !important; }
 
-  h2 {
-    color: #2f0226;
-    font-family: "RobotoMedium";
-    font-size: 25px;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    text-align: left; }
-
   h3 {
     font-family: "RobotoMedium";
     font-size: 22px;
@@ -1585,18 +1581,12 @@ input, textarea {
     margin-top: 10px; } }
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 992px) {
-  .header-top-up {
-    padding: 3px 0; }
-    .header-top-up .button-3 {
-      margin-top: 10px; }
-    .header-top-up .ab-phone {
-      text-align: left;
-      margin-top: 13px;
-      color: white; }
-    .header-top-up .ab-right {
-      text-align: right;
-      margin-top: 13px;
-      color: white; }
+  .section_position {
+    padding: 90px 0px; }
+
+  h2 {
+    font-size: 40px;
+    margin-bottom: 90px; }
 
   .common-form {
     width: 378px; }
