--- a/wp-content/themes/lantana/style.scss
+++ b/wp-content/themes/lantana/style.scss
@@ -92,8 +92,9 @@ em {
 
 
 .main-content{
-	//display: table-row;
-	//height: 0%;
+	display: table-row;
+	margin-bottom: 50px;
+	height: 100%;
 }
 
 .section_position{
@@ -517,7 +518,7 @@ textarea{
 	transition: 0.5s;
 }
 .wrap{
-	//display: table;
+	display: table;
 	height: 100%;
 	width: 100%;
 	min-height: 100%;
@@ -534,6 +535,7 @@ textarea{
 	border-bottom: 1px solid #EBEBEB;
 
 }
+
 .header:before{
 	content: "";
 	position: absolute;
@@ -543,10 +545,24 @@ textarea{
 	width: 100%;
 	height: 100%;
 }
+.header-inner {
+	
+	color: #fff;
+	position: relative;
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px solid #EBEBEB;
+	display: table-row;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+}
 
 .header__top_position{
 	padding: 7px 0px;
 	padding-top: 30px;
+}
+.header__top_inner_position{
+	padding: 7px 0px;
+	//padding-top: 30px;
 }
 .main-menu_view{
 	display: block;
@@ -1294,12 +1310,13 @@ box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
 }
 
 .footer{
-	//display: table-row;
-	//height: 0px;
+	display: table-row;
+	height: 1px;
 	width: 100%;
 	padding: 25px 0px;
   	color: #fff;
   	background: darken($gray, 10%);
+  	box-sizing: border-box;
   	//display: table-row;
   	//height: 1px;
   	.copyright{
@@ -2159,6 +2176,7 @@ input, textarea{
 		font-size: 40px;
 		margin-bottom: 90px;
 	}
+	
 	.common-form{
         width: 378px;
         .close{
